--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,12 +1,12 @@
 /**
  * Site header
  */
+
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
-    background-color: $brand-color;
-
+    background-image: url('{{ site.baseurl }}/images/WC_photo_banner.png');
     // Positioning context for the mobile navigation icon
     position: relative;
 }
