--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,10 +3,7 @@
  */
 
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
-    background-image: url('{{ site.baseurl }}/images/WC_photo_banner.png');
+
     // Positioning context for the mobile navigation icon
     position: relative;
 }
@@ -22,7 +19,7 @@
 
     &,
     &:visited {
-        color: #FFFFFF;
+        color: #000000;
     }
 }
 
@@ -89,7 +86,38 @@
     }
 }
 
+.bg {
+  background: url('../assets/images/WC_photo_banner.png') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 442px; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
 
+.jumbotron {
+  height: 350px;
+  padding: 180px 0px;
+  position: relative;
+  color: white;
+    background:transparent;
+}
+.logo {
+  padding: 5px 0;
+	display: block;
+	position: relative;
+	z-index:100;
+	top: 10px;
+  background:transparent;
+  float: left;
+
+	img {
+		display: block;
+		width: 400px;
+		height: auto;
+	}
+}
 
 /**
  * Site footer
