--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -85,38 +85,123 @@
         }
     }
 }
+header {
+    position: relative;
+    width: 100%;
+    min-height: auto;
+    text-align: center;
+    color: #fff;
+    background-image: url(../assets/images/WC_photo_banner.png);
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
 
-.bg {
-  background: url('../assets/images/WC_photo_banner.png') no-repeat center center;
-  position: fixed;
-  width: 100%;
-  height: 442px; /*same height as jumbotron */
-  top:0;
-  left:0;
-  z-index: -1;
+header .header-content {
+    position: relative;
+    width: 100%;
+    padding: 100px 15px;
+    text-align: center;
+}
+
+header .header-content .header-content-inner h1 {
+    margin-top: 0;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+header .header-content .header-content-inner hr {
+    margin: 30px auto;
+}
+
+header .header-content .header-content-inner p {
+    margin-bottom: 50px;
+    font-size: 16px;
+    font-weight: 300;
+    color: rgba(255,255,255,.7);
+}
+
+@media(min-width:768px) {
+    header {
+        min-height: 100%;
+    }
+
+    header .header-content {
+        position: absolute;
+        top: 50%;
+        padding: 0 50px;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+
+    header .header-content .header-content-inner {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 1000px;
+    }
+
+    header .header-content .header-content-inner p {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 80%;
+        font-size: 18px;
+    }
 }
 
 .jumbotron {
   height: 350px;
-  padding: 180px 0px;
+  padding: 80px 0px;
   position: relative;
   color: white;
-    background:transparent;
+  background:transparent;
+
+  p{
+
+
+  }
 }
+
 .logo {
   padding: 5px 0;
-	display: block;
 	position: relative;
 	z-index:100;
-	top: 10px;
-  background:transparent;
-  float: left;
+	background:transparent;
+  text-align: center;
+  max-width: 55%;
 
 	img {
 		display: block;
-		width: 400px;
 		height: auto;
+
+
 	}
+}
+
+
+.tbl-op ul {
+    margin-left:0;
+    padding:0;
+    list-style-type:none;
+    color:#2895f1;
+}
+
+.tbl-op {
+  float:right;
+  padding-right: 50px;
+  padding-top: 25px;
+}
+
+.tbl-op li {
+    cursor:pointer;
+    display:inline-block;
+}
+
+.tbl-op li .fa-li {
+    position: static;
 }
 
 /**
