Added style and colour to form in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
         <div id="mc_embed_signup" class="form u-futura-4 clearfix">
           <form action="//webcamp.us9.list-manage.com/subscribe/post?u=fe215c156a9c379ef50c7c68c&amp;id=18c5122cf2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div class="signup">
-              <h2 class="mailinglist-title">Subscribe to Webcamp.si mailing list<br /> and get news about talks, tickets and parties.</h2>
+              <h2 class="mailinglist-title">Subscribe to Webcamp.si mailing list and get news about talks, tickets and parties.</h2>
               <div class="mc-field-group">
                 <label for="mce-FNAME">First Name </label>
                 <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
