--- a/css/main.scss
+++ b/css/main.scss
@@ -21,10 +21,13 @@ $brand-color:      #27ae60;
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
+$secondary-color: rgba(252,182,17,1);
+$green-normal:     #05a94b;
+$green-hover:      #04a144;
+$green-click:      #05a94b;
 
 $on-palm:          600px;
 $on-laptop:        800px;
-
 
 
 // Using media queries with like this:
