--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,9 @@ $secondary-color: rgba(252,182,17,1);
 $green-normal:     #05a94b;
 $green-hover:      #04a144;
 $green-click:      #05a94b;
+$social-icon-normal:   #737170;
+$twitter-hover:    #00aced;
+$facebook-hover:   #3b5998;
 
 $on-palm:          600px;
 $on-laptop:        800px;
