Fixed error in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,13 +30,10 @@
 </div>
 
 <div class="row">
-  <div class="col-md-8 col-md-offset-2">
-
-
-    <div class="jumbotron">
+      <div class="jumbotron col-md-8 col-md-offset-2">
       <h1>March 12th 2016</h1>
 
-      <div class='form'>
+      <div class="form">
         <!-- Begin MailChimp Signup Form -->
         <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
         <style type="text/css">
@@ -71,8 +68,8 @@
         <!--End mc_embed_signup-->ß
       </div>
     </div>
-
 </div>
+
   </div>
   <nav class="site-nav">
     <a href="#" class="menu-icon">
