--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -152,16 +152,7 @@ header .header-content .header-content-inner p {
     }
 }
 
-.jumbotron {
-  height: 350px;
-  padding: 80px 0px;
-  position: relative;
-  color: white;
-  background:transparent;
- @media(max-width: 768px) {
-   padding: 200px 0px;
- }
-}
+
 /**
  * Logo
  */
@@ -232,6 +223,15 @@ header .header-content .header-content-inner p {
        padding-left: 0;
        padding-bottom:100px;
        margin-top:2em;
+       h1 {
+         font-family: $base-font-family;
+         text-transform: none;
+         font-weight:900;
+         font-size: 50px;
+         margin-top:60px;
+         text-align: center;
+         color: white;
+       }
 
        h2 {
          font-family: $base-font-family;
