--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,8 @@ $social-icon-normal:   #737170;
 $twitter-hover:    #00aced;
 $facebook-hover:   #3b5998;
 $red-color:        #ef4036;
+$white-color:      #fff;
+
 
 $on-palm:          600px;
 $on-laptop:        800px;
