Fixed bullets in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,8 +11,8 @@
 
       <div class="footer-col  footer-col-2">
         <h3>Useful Information</h3>
-        <ul>
-          <li>Ticktet</li>
+        <ul class="custom-bullet">
+          <li>Ticket</li>
           <li>Location</li>
           <li>Code of Conduct</li>
           <li>Last year</li>
