--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -364,8 +364,8 @@ header .header-content .header-content-inner p {
     background-color: $grey-color;
     h3{
       color: $white-color;
-      font-weight: bold;
       font-size: 16px;
+      font-weight: normal;
       padding-left: $spacing-unit;
     }
     .form #mc_embed_signup form .signup {
@@ -386,9 +386,24 @@ header .header-content .header-content-inner p {
 .contact-list,
 .social-media-list {
     list-style: none;
-    margin-left: 20px;
+    margin-left: 40px;
 }
 
+.custom-bullet li {
+    display: block;
+}
+
+.custom-bullet li:before
+{
+    /*Using a Bootstrap glyphicon as the bullet point*/
+    content: "\e080";
+    font-family: 'Glyphicons Halflings';
+    font-size: 9px;
+    float: left;
+    margin-top: 4px;
+    margin-left: -17px;
+    color: #CCCCCC;
+}
 
 
 .footer-col-wrapper {
