Added last year url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-
+  <div class="wrapper">
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <h3>Contact</h3>
@@ -15,7 +15,7 @@
           <li>Ticket</li>
           <li>Location</li>
           <li>Code of Conduct</li>
-          <li>Last year</li>
+          <li><a href="//2015.webcamp.si/">Last year</a></li>
         </ul>
       </div>
 
@@ -49,6 +49,5 @@
             </form>
       </div>
 
-
-
+</div>
 </footer>
