--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header class="header container-fluid">
 
 <div class="row">
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
     <img src="../assets/images/WC_logo.png" class="logo">
   </div>
-  <div class="btn-group tbl-op col-md-2 hidden-xs " role="social icons">
+  <div class="btn-group tbl-op col-sm-12 col-md-2 " role="social icons">
     <ul class="fa-ul">
 
     {% if site.twitter_username %}
