Added content, styling fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header container-fluid">
 
 <div class="row">
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-md-8 col-md-offset-2 logo-wrapper">
     <img src="../assets/images/WC_logo.png" class="logo">
   </div>
   <div class="btn-group tbl-op col-md-2 hidden-xs " role="social icons">
@@ -42,7 +42,7 @@
           <form action="//webcamp.us9.list-manage.com/subscribe/post?u=fe215c156a9c379ef50c7c68c&amp;id=18c5122cf2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div class="signup">
               <h1>March 12th 2016</h1>
-              <h2 class="mailinglist-title">Subscribe to Webcamp.si mailing list and get news about talks, tickets and parties.</h2>
+              <h2 class="mailinglist-title">Subscribe to our mailing list and get notified about tickets, talks and parties.</h2>
               <div class="mc-field-group">
                 <label for="mce-FNAME">First Name </label>
                 <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
