--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -85,6 +85,23 @@ h1, h2, h3, h4, h5, h6 {
     color: $brand-color;
 }
 
+h1, h2 {
+  font-weight: 400;
+  font-size: 23px;
+  display: inline-block;
+  text-transform: uppercase;
+}
+
+h1 {
+  display: block;
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+h2 {
+  margin-top: 30px;
+}
+
 
 
 /**
