--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -158,20 +158,31 @@ header .header-content .header-content-inner p {
  * Logo
  */
 
+.logo-wrapper {
+  margin-top: 60px;
+
+  @include MQ(M) {
+      margin-top: 30px;
+  }
+}
+
 .logo {
   padding: 5px 0;
 	position: relative;
 	z-index:100;
 	background:transparent;
   text-align: center;
-  max-width: 50%;
+  max-width: 90%;
 
-	img {
-		display: block;
-		height: auto;
+  @include MQ(M) {
+      margin-top: 30px;
+      max-width: 50%;
+  }
+}
 
-
-	}
+.logo img {
+  display: block;
+  height: auto;
 }
 
 /**
@@ -535,4 +546,37 @@ header .header-content .header-content-inner p {
             font-size: 18px;
         }
     }
+}
+
+/*
+ * Section breaks
+ */
+
+.section {
+  margin-top: 30px;
+  padding-top: 30px;
+  border-top: 1px solid $red-color;
+}
+
+
+/*
+ * Embeds
+ */
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
