--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    <div class="container">
+    <div class="container-fluid">
 
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
