Added home link to logo in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,9 @@
 <div class="row">
 
   <div class="col-md-8 col-md-offset-2 logo-wrapper">
-    <img src="../assets/images/WC_logo.png" class="logo">
+    <a href="/">
+      <img src="../assets/images/WC_logo.png" class="logo">
+    </a>
   </div>
   <div class="btn-group tbl-op col-sm-12 col-md-2 hidden-xs" role="social icons">
     <ul class="fa-ul">
