--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
       </a>
     </li>
     {% endif %}
-
+    &nbsp;&nbsp;&nbsp;
     {% if site.facebook_username %}
     <li>
       <a href="https://github.com/{{ site.facebook_username }}" class="facebook">
