--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,4 +32,14 @@
     <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
     <meta name="msapplication-config" content="/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+
+
+    	<meta property="og:title" content="WebCamp Ljubljana 2015" />
+    	<meta property="og:site_name" content="WebCamp Ljubljana 2015"/>
+    	<meta property="og:url" content="http://2016.webcamp.si" />
+    	<meta property="og:description" content="WebCamp Ljubljana is the unconference where everyone who is building and
+    	designing for the web share their knowledge, experience, and mockups and vim configurations. It is organized
+    	annually-ish by	the community, for the community." />
+    	<meta property="og:image" content="http://2016.webcamp.si/assets/images/fb.png" />
+
 </head>
