Update FB image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,6 +40,6 @@
     	<meta property="og:description" content="WebCamp Ljubljana is the unconference where everyone who is building and
     	designing for the web share their knowledge, experience, and mockups and vim configurations. It is organized
     	annually-ish by	the community, for the community." />
-    	<meta property="og:image" content="http://2016.webcamp.si/assets/images/fb.png" />
+    	<meta property="og:image" content="http://2016.webcamp.si/assets/images/fb2.png" />
 
 </head>
