--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 
     {% if site.facebook_username %}
     <li>
-      <a href="https://github.com/{{ site.facebook_username }}" class="facebook">
+      <a href="https://facebook.com/{{ site.facebook_username }}" class="facebook">
         <i class='fa fa-facebook fa-2x'>
         </i>
       </a>
