Added section for TALKS

--- a/css/main.scss
+++ b/css/main.scss
@@ -56,6 +56,8 @@ $on-laptop:        800px;
         "breakpoints",
         "mixins",
         "layout",
+        "talks",
+        "talkers",
         "syntax-highlighting"
 
 ;
