--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -334,7 +334,7 @@ header .header-content .header-content-inner p {
  	}
  }
 
- 
+
 /**
  * Site footer
  */
@@ -548,4 +548,12 @@ header .header-content .header-content-inner p {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+/*
+ * Sponsors
+ */
+.sponsor-logo {
+  display: block;
+  margin: 50px 0;
 }
