add sponsors to page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
             <ul class="nav navbar-nav text-center">
               <li><a href="{{ site.baseurl }}/#cfp">CALL FOR TALKS</a></li>
               <li><a href="{{ site.baseurl }}/#2015">LAST YEAR</a></li>
+              <li><a href="{{ site.baseurl }}/#sponors">SPONSORS</a></li>
               <li><a href="{{ site.baseurl }}/#partners">PARTNERS</a></li>
               <li><a href="{{ site.baseurl }}/#contact">CONTACT</a></li>
 
