add sponsors to page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,9 @@
               <li><a href="{{ site.baseurl }}/#cfp">CALL FOR TALKS</a></li>
               <li><a href="{{ site.baseurl }}/#2015">LAST YEAR</a></li>
               <li><a href="{{ site.baseurl }}/#sponors">SPONSORS</a></li>
+              {% comment %}
               <li><a href="{{ site.baseurl }}/#partners">PARTNERS</a></li>
+              {% endcomment %}
               <li><a href="{{ site.baseurl }}/#contact">CONTACT</a></li>
 
               {% comment %}
