--- a/_sass/_talkers.scss
+++ b/_sass/_talkers.scss
@@ -7,10 +7,10 @@
 }
 
 .talkers-one{
-	display: inline-table;
-	margin:2%;
-	width: 11em;
-	height: 11em;
+	width: 29%;
+	display: inline-block;
+	vertical-align: top;
+	margin: 0px 20px 20px 0px;
 	background-color: $grey-color-light;
 
 	&:hover {
