--- a/_sass/_talkers.scss
+++ b/_sass/_talkers.scss
@@ -2,30 +2,27 @@
 	padding-left:0;
 	display:block;
 	width:100%;
-	text-align: center;
+	text-align: left;
 	margin: 5% auto;
 }
 
 .talkers-one{
-	width: 29%;
-	display: inline-block;
+	/* width: 29%; */
+	/*display: inline-block;*/
 	vertical-align: top;
-	margin: 0px 20px 20px 0px;
-	background-color: $grey-color-light;
+	/*margin: 0px 20px 20px 0px;*/
+	background-color: $red-color-talks;
 
 	&:hover {
-		background-color: $grey-color-light;
+		background-color: $grey-color;
 	}
-	h2 {
-		margin-bottom: 5px;
-	};
 }
+
 
 .talker-name {
 	font: {
-		size: 0.9em;
-		weight: 400;
+		weight: 600;
 	};
-	color: $text-color;
-	background-color: rgba(255, 255, 255, 0.8);
-}
+		color: $red-color;
+		padding: 0.50em;
+	}
