--- a/_sass/_talks.scss
+++ b/_sass/_talks.scss
@@ -4,9 +4,7 @@
 	}
 
 .talk-title {
-	font: {
-		weight: 400;
-		};
+	font-weight: 400;
 	color: $red-color;
 	position:relative;
 	padding: 0 0 0 0.50em;
@@ -21,45 +19,38 @@
 }
 
 .talk-role {
-	font: {
-		size: 0.7em;
-		weight: 600;
-	};
-	color: $red-color;
+	font-size: 0.7em;
+	font-weight: 600;
 	color: $white-color;
 	text-transform: lowercase;
 	position: absolute;
   bottom: 0;
   left: 0;
-	margin-bottom: 0.5em;
+	margin-bottom: 0.50em;
 	padding: 0 0 0 0.50em;
-	}
+}
 
-	.talk-twitter{
-		color: $grey-color;
-		position: absolute;
-		bottom: 0;
-		right: 0;
-		margin-bottom: 0.3em;
-		padding: 0 0.5em 0 0;
-
-	}
+.talk-twitter{
+	color: $grey-color;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	margin-bottom: 0.3em;
+	padding: 0 0.5em 0 0;
+}
 
 .talk-info {
 	height:22em;
 	position:relative;
 	background-color: $red-color-talks;
 	margin-bottom: 2em;
-
 }
 
 .talker-page-name {
 	margin-top:50px;
-	font: {
-		size: 1.3em;
-		weight: 700;
-		family: $base-font-family;
-	};
+	font-size: 1.3em;
+	font-weight: 700;
+	font-family: $base-font-family;
 	padding: 0.5em 0 0;
 	color: $text-color;
 	position:relative;
