Implemented html validation errors as per gandalfars suggestions and added image and formating to detailed talks page

--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -4,11 +4,20 @@ layout: default_without_mailchimp
 
 <section class="slide">
 	<div class="content">
-		<h1 class="talker-page-name">{{ page.name }}</h1>
-		<h2>{{ page.title }}</h2>
-		<div>
-			{{ content }}
-		</div>
+		<div clas="row">
+				<div class="col-md-4">
+					<p class="talk-image">
+						<img src="{{ site.baseurl }}/assets/images/speakers/{{ page.avatar }}" />
+					</p>
+					<p class="talker-name">{{ page.name }}</p>
+				</div>
+				<div class="col-md-8">
+					<p class="talker-name">{{ page.title }}</p>
+					<div>
+						{{ content }}
+					</div>
+				</div>
+			</div>
 		<a href="{{ site.baseurl }}/#talks" class="back">< Back to talks</a>
 	</div>
 </section>
