--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -557,3 +557,15 @@ header .header-content .header-content-inner p {
   display: block;
   margin: 50px 0;
 }
+
+.lgm-logo {
+  margin-top: 30px;
+}
+
+.fri-tagline {
+  margin-top: 8px;
+}
+
+.sponsors-buna {
+  margin-top: 40px;
+}
