--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -334,7 +334,7 @@ header .header-content .header-content-inner p {
  	}
  }
 
- 
+
 /**
  * Site footer
  */
@@ -548,4 +548,24 @@ header .header-content .header-content-inner p {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+/*
+ * Sponsors
+ */
+.sponsor-logo {
+  display: block;
+  margin: 50px 0;
+}
+
+.lgm-logo {
+  margin-top: 30px;
+}
+
+.fri-tagline {
+  margin-top: 8px;
+}
+
+.sponsors-buna {
+  margin-top: 40px;
 }
