--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,15 +12,20 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-3">
             <ul class="nav navbar-nav text-center">
-              <!--
-              <li><a href="{{ site.baseurl }}/#cfp">CALL FOR TALKS</a></li>
-              -->
+
               <li><a href="{{ site.baseurl }}/#talks">TALKS</a></li>
+              <li><a href="{{ site.baseurl }}/#iot">IoT</a></li>
+              <!--
+              <li><a href="{{ site.baseurl }}/#schedule">SCHEDULE</a></li>
+              -->
               <li><a href="{{ site.baseurl }}/#2015">LAST YEAR</a></li>
               <li><a href="{{ site.baseurl }}/#sponsors">SPONSORS</a></li>
+
+
               {% comment %}
               <li><a href="{{ site.baseurl }}/#partners">PARTNERS</a></li>
               {% endcomment %}
+
               <li><a href="{{ site.baseurl }}/#contact">CONTACT</a></li>
 
               {% comment %}
