--- a/_sass/_talks.scss
+++ b/_sass/_talks.scss
@@ -34,11 +34,7 @@
 
 .talk-twitter{
 	color: $grey-color;
-	position: absolute;
-	bottom: 0;
-	right: 1em;
-	margin-bottom: 1.3em;
-	padding: 0 0.5em 0 0;
+	padding: 0.5em;
 }
 
 .talk-info {
