Added IoT CORNER section

--- a/css/main.scss
+++ b/css/main.scss
@@ -58,6 +58,7 @@ $on-laptop:        800px;
         "mixins",
         "layout",
         "talks",
+        "iot",
         "talkers",
         "syntax-highlighting"
 
