--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav text-center">
 
               <li><a href="{{ site.baseurl }}/#talks">TALKS</a></li>
-              <li><a href="{{ site.baseurl }}/#iot">IoT</a></li>
+              <li><a href="{{ site.baseurl }}/#iotcorner">IoT CORNER</a></li>
               <!--
               <li><a href="{{ site.baseurl }}/#schedule">SCHEDULE</a></li>
               -->
