--- a/_layouts/default_without_mailchimp.html
+++ b/_layouts/default_without_mailchimp.html
@@ -15,9 +15,12 @@
               <!--
               <li><a href="{{ site.baseurl }}/#cfp">CALL FOR TALKS</a></li>
               -->
+              <li><a href="{{ site.baseurl }}/#schedule">SCHEDULE</a></li>
               <li><a href="{{ site.baseurl }}/#talks">TALKS</a></li>
               <li><a href="{{ site.baseurl }}/#iotcorner">IoT CORNER</a></li>
+              <!--
               <li><a href="{{ site.baseurl }}/#2015">LAST YEAR</a></li>
+              -->
               <li><a href="{{ site.baseurl }}/#partners">PARTNERS</a></li>
               <li><a href="{{ site.baseurl }}/#contact">CONTACT</a></li>
 
