--- a/css/main.scss
+++ b/css/main.scss
@@ -59,6 +59,7 @@ $on-laptop:        800px;
         "layout",
         "talks",
         "iot",
+        "schedule",
         "talkers",
         "syntax-highlighting"
 
