Added location map

--- a/_layouts/default_without_mailchimp.html
+++ b/_layouts/default_without_mailchimp.html
@@ -21,7 +21,8 @@
               <!--
               <li><a href="{{ site.baseurl }}/#2015">LAST YEAR</a></li>
               -->
-              <li><a href="{{ site.baseurl }}/#partners">PARTNERS</a></li>
+              <li><a href="{{ site.baseurl }}/#location">LOCATION</a></li>
+              <li><a href="{{ site.baseurl }}/#sponsors">SPONSORS</a></li>
               <li><a href="{{ site.baseurl }}/#contact">CONTACT</a></li>
 
               {% comment %}
