--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-md-8 col-md-offset-3">
+        <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-3">
             <ul class="nav navbar-nav text-center">
 
               <li><a href="{{ site.baseurl }}/#schedule">SCHEDULE</a></li>
@@ -20,6 +20,7 @@
               <!--
               <li><a href="{{ site.baseurl }}/#2015">LAST YEAR</a></li>
               -->
+              <li><a href="{{ site.baseurl }}/#location">LOCATION</a></li>
               <li><a href="{{ site.baseurl }}/#sponsors">SPONSORS</a></li>
 
 
@@ -39,7 +40,7 @@
       </div>
 
       <div class="page-content">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
           {{ content }}
         </div>
       </div>
