Fixed wrapping in header area

--- a/_includes/header_without_mailchimp.html
+++ b/_includes/header_without_mailchimp.html
@@ -2,12 +2,12 @@
 
 <div class="row">
 
-  <div class="col-md-8 col-md-offset-2 logo-wrapper">
+  <div class="col-md-8 col-md-offset-2">
     <a href="/">
       <img src="../assets/images/WC_logo.png" class="logo">
     </a>
   </div>
-  <div class="btn-group tbl-op col-sm-12 col-md-2 hidden-xs" role="social icons">
+  <div class="btn-group tbl-op col-md-2 hidden-xs  hidden-sm" role="social icons">
     <ul class="fa-ul">
 
     {% if site.twitter_username %}
